// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TintableSceneSVGDefs /> objects SVG filters and masks render 1`] = `
<svg
  height="0"
  version="1.1"
  viewBox="0 0 undefined undefined"
  width="0"
  x="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
  y="0"
>
  <defs>
    <filter
      colorInterpolationFilters="sRGB"
      filterUnits="objectBoundingBox"
      height="100%"
      primitiveUnits="objectBoundingBox"
      width="100%"
      x="0"
      y="0"
    >
      <feFlood
        result="tintHue"
      />
      <feImage
        height="100%"
        result="highlight-map"
        width="100%"
        x="0"
        y="0"
      />
      <feImage
        height="100%"
        result="shadow-map"
        width="100%"
        x="0"
        y="0"
      />
      <feBlend
        in="tintHue"
        in2="highlight-map"
        mode="screen"
        result="tint-highlight-blend"
      />
      <feBlend
        in="shadow-map"
        in2="tint-highlight-blend"
        mode="multiply"
        result="finished-tint"
      />
      <feBlend
        in="finished-tint"
        in2="tintHue"
        mode="luminosity"
        result="finished-filter"
      />
    </filter>
    <mask
      height="100%"
      maskUnits="objectBoundingBox"
      width="100%"
      x="0"
      y="0"
    >
      <image
        height="100%"
        width="100%"
        x="0"
        y="0"
      />
    </mask>
  </defs>
</svg>
`;

exports[`<TintableSceneSVGDefs /> rooms SVG filters and masks render 1`] = `
<svg
  height="0"
  version="1.1"
  viewBox="0 0 undefined undefined"
  width="0"
  x="0"
  xmlns="http://www.w3.org/2000/svg"
  xmlnsXlink="http://www.w3.org/1999/xlink"
  y="0"
>
  <defs>
    <filter
      colorInterpolationFilters="sRGB"
      filterUnits="objectBoundingBox"
      height="100%"
      primitiveUnits="objectBoundingBox"
      width="100%"
      x="0"
      y="0"
    >
      <feComponentTransfer
        in="SourceGraphic"
        result="adjustedHistogram"
      >
        <feFuncR
          type="table"
        />
        <feFuncG
          type="table"
        />
        <feFuncB
          type="table"
        />
      </feComponentTransfer>
      <feFlood
        result="tintHue"
      />
      <feBlend
        in="adjustedHistogram"
        in2="tintHue"
        mode="multiply"
      />
    </filter>
    <mask
      height="100%"
      maskUnits="objectBoundingBox"
      width="100%"
      x="0"
      y="0"
    >
      <image
        height="100%"
        width="100%"
        x="0"
        y="0"
      />
    </mask>
  </defs>
</svg>
`;
